--- a/#src/_header.html
+++ b/#src/_header.html
@@ -3,57 +3,59 @@
 
 		<div class="header__row d-flex">
 
-			<a href="index.html" class="logo-icon header__logo">
-				<!-- <? bloginfo("url"); ?> -->
-				<p class="logo-icon__text">Название <span>текст logo</span></p>
-			</a>
+			<a href="index.html" class="logo-icon header__logo"></a>
 
-			<div class="header__navigation">
-				<div class="header__menu-block">
-					<ul class="menu-list header__menu-list d-flex">
-						<li class="menu-list__item"><a href="#" class="menu-list__link">Пункт 1</a></li>
-						<li class="menu-list__item"><a href="#" class="menu-list__link">Пункт 2</a></li>
-						<li class="menu-list__item"><a href="#" class="menu-list__link">Пункт 3</a></li>
-						<li class="menu-list__item"><a href="#" class="menu-list__link">Пункт 4</a></li>
-						<li class="menu-list__item"><a href="#" class="menu-list__link">Пункт 5</a></li>
-					</ul>
-					<!-- <?php wp_nav_menu( array('theme_location' => 'menu_main','menu_class' => 'menu__list',
-						'container_class' => 'menu__list','container' => false )); ?>  -->
+			<ul class="header__menu-list menu-list d-flex">
+				<li class="menu-list__item"><a href="#" class="menu-list__link"><span></span> Аудиоролики</a></li>
+				<li class="menu-list__item"><a href="#" class="menu-list__link"><span></span>Дикторы</a></li>
+				<li class="menu-list__item"><a href="#" class="menu-list__link"><span></span>Хронометраж</a></li>
+				<li class="menu-list__item"><a href="#" class="menu-list__link"><span></span>Оплата</a></li>
+				<li class="menu-list__item"><a href="#" class="menu-list__link"><span></span>Контакты</a></li>
+			</ul>
 
-					<div class="search header__search">
-						<form role="search" method="get" action="<?php echo home_url( '/' ) ?>" id="searchform"
-							class="search__form">
-							<input type="text" placeholder="Поиск" class="search__input input"
-								value="<?php echo get_search_query() ?>" name="s" id="s">
-							<button type="submit" tabindex="2" value="" id="searchsubmit" class="search__btn"></button>
-						</form>
-					</div>
-				</div>
-				<button class="mob-search-btn header__mob-search-btn"></button>
+			<button type="button" class="icon-menu" aria-label="Иконка бургера">
+				<span></span>
+				<span></span>
+				<span></span>
+			</button>
 
-				<div class="contacts header__contacts d-flex">
-					<a href="tel:84951700000" class="contacts__phone header__phone">8 (495) 170-00-00</a>
-					<!-- <a href="tel:<? echo preg_replace('/[^0-9]/', '', $tel); ?>"><? echo $tel = carbon_get_theme_option("as_phone_1"); ?></a> -->
-					<p class="contacts__time-phone header__time-phone">Звонить с 08:00 до 22:00</p>
-					<a href="#callback" class="header__popup-link _popup-link">ЗАКАЗАТЬ ЗВОНОК</a>
-				</div>
-				<a href="tel:84951700000" class="mob-phone-icon header__mob-phone-icon"></a>
-				<!-- <a href="tel:<? echo preg_replace('/[^0-9]/', '', $tel); ?>" class="mob-callback__phone"></a> -->
+		</div>
 
-				<a href="#" class="bascket-icon"><span class="bascket-icon__number bascet_counter">1</span></a>
+		<div class="header__buttons buttons-header">
 
-				<button type="button" class="icon-menu" aria-label="Иконка бургера">
-					<span></span>
-					<span></span>
-					<span></span>
-				</button>
+			<div class="buttons-header__col">
+				<a href="#" class="buttons-header__btn btn">
+					Как начать работу
+				</a>
+			</div>
+
+			<div class="buttons-header__col">
+				<a href="#" class="buttons-header__btn btn">
+					Преимущества
+				</a>
+			</div>
+
+			<div class="buttons-header__col">
+				<a href="#" class="buttons-header__btn btn">
+					Фото студии
+				</a>
+			</div>
+
+			<div class="buttons-header__col">
+				<a href="#" class="buttons-header__btn btn">
+					Радио прогноз погоды
+				</a>
+			</div>
+
+			<div class="buttons-header__col">
+				<a href="#" class="buttons-header__btn btn">
+					Голосовые приветствия
+				</a>
 			</div>
 
 		</div>
 
 	</div>
-	<!-- Полоса прокрутки в шапке -->
-	<div id="scroll-progress"></div>
 </header>
 
 <!-- Мобильное меню -->
@@ -71,10 +73,10 @@
 </div>
 
 <!-- Строка мобильного поиска -->
-<div class="search header__search-mob">
+<!-- <div class="search header__search-mob">
 	<form role="search" method="get" action="<?php echo home_url( '/' ) ?>" id="searchform" class="search__form">
 		<input type="text" class="search__input input" placeholder="Поиск" value="<?php echo get_search_query() ?>" name="s"
 			id="s">
 		<button type="submit" id="searchsubmit" class="search__btn" tabindex="2" value=""></button>
 	</form>
-</div>
+</div> -->
