--- a/epicenter/index.html
+++ b/epicenter/index.html
@@ -104,41 +104,21 @@
 </div> -->
 		<main class="page">
 
-			
-
-			<section id="main-banner" class="main-banner section">
+			<div class="page__inner">
 				<div class="_container">
 
-					<h2 class="main-banner__title"></h2>
-					<p class="main-banner__subtitle"></p>
+					<div class="page-index__main-content main-content">
+
+						<sectiion class="banner-index banner"></sectiion>
+
+					</div>
+
+					<aside class="page-index__sidebar sidebar">
+
+					</aside>
 
 				</div>
-			</section>
-
-			<section id="about" class="about section">
-				<div class="_container">
-
-					<h2 class="__title title"></h2>
-					<p class="__subtitle"></p>
-
-				</div>
-			</section>
-
-			<section id="about" class="about section">
-				<div class="_container">
-
-					<h2 class="__title title"></h2>
-
-				</div>
-			</section>
-
-			<section id="about" class="about section">
-				<div class="_container">
-
-					<h2 class="__title title"></h2>
-
-				</div>
-			</section>
+			</div>
 
 		</main>
 		<footer id="footer" class="footer">
