--- a/epicenter/index.html
+++ b/epicenter/index.html
@@ -109,11 +109,150 @@
 
 					<div class="page-index__main-content main-content">
 
-						<sectiion class="banner-index banner"></sectiion>
+						<div class="page-index__banner banner" style="background-image: url('../img/banner-index.jpg');">
+						</div>
+
+						<div class="page-index__info info">
+
+							<div class="info__inner-text">
+
+							</div>
+
+							<div class="info__inner-cards">
+
+								<div class="info__column">
+									<a href="#" class="info__card card-info _ibg">
+										<img src="img/info-cards/01.jpg" alt="Картинка">
+									</a>
+								</div>
+
+								<div class="info__column">
+									<a href="#" class="info__card card-info _ibg">
+										<img src="img/info-cards/02.jpg" alt="Картинка">
+									</a>
+								</div>
+
+								<div class="info__column">
+									<a href="#" class="info__card card-info _ibg">
+										<img src="img/info-cards/03.jpg" alt="Картинка">
+									</a>
+								</div>
+
+							</div>
+
+						</div>
+
+						<div class="page-index__time-work time-work">
+							<h2 class="time-work__title">Время работы</h2>
+							<div class="time-work__descp">
+								<p>
+									Друзья! Студия "Эпицентр" ZVUK.FM работает с 11:00 по московскому времени и до окончания изготовления
+									записанных в течение дня голосов и аудиороликов.
+								</p>
+								<p>
+									Отправить задание на изготовление аудиорекламы, запись дикторского голоса или производство звукофайла
+									IVR можно круглосуточно через форму on-line заказа.
+								</p>
+								<p>
+									Консультации по телефону начинаются после 11:00 ежедневно, кроме субботы и воскресения.
+									Актёры появляются в студии по расписанию.
+								</p>
+								<p>
+									Изготовление аудиорекламы, радиорекламы, аудиороликов, радиороликов, банк голосов дикторов, голосовые
+									приветствия,
+									озвучка текста.
+								</p>
+							</div>
+						</div>
+
+						<div class="page-index__ audio-advertising audio-advertising">
+							<h2 class="audio-advertising__title">Аудиореклама</h2>
+
+							<div class="audio-advertising__inner">
+
+								<div class="audio-advertising__column">
+									<a href="#" class="audio-advertising__card card-advertising">
+										<h4 class="card-advertising__title">Студия радиорекламы "Эпицентр"</h4>
+										<div class="card-advertising__text">
+											<p>
+												Изготовление радиороликов.
+												Дикторские голоса. Запись
+												голосовых приветсвий и
+												корпоративных автоответчиков.
+											</p>
+										</div>
+									</a>
+								</div>
+
+								<div class="audio-advertising__column">
+									<a href="#" class="audio-advertising__card card-advertising">
+										<h4 class="card-advertising__title">Дикторские <br>
+											голоса</h4>
+										<div class="card-advertising__text">
+											<p>
+												Дикторские голоса, это дикторы,
+												актёры театра - специалисты в
+												области озвучки радиорекламы.
+											</p>
+										</div>
+									</a>
+								</div>
+
+								<div class="audio-advertising__column">
+									<a href="#" class="audio-advertising__card card-advertising">
+										<h4 class="card-advertising__title">Начитка <br>
+											текста</h4>
+										<div class="card-advertising__text">
+											<p>
+												Начитка текста - это несколько
+												дублей прочтения вашего текста
+												голосом диктора. Мы продаём
+												дикторские голоса. 300 рублей за
+												текст радиоролика.
+											</p>
+										</div>
+									</a>
+								</div>
+
+							</div>
+
+						</div>
 
 					</div>
 
 					<aside class="page-index__sidebar sidebar">
+
+						<div class="sidebar__button-block">
+							<a href="#" class="sidebar__btn btn btn--red">Оформить On-line заказ</a>
+							<a href="#" class="sidebar__btn btn btn--grey">Ваши файлы</a>
+						</div>
+
+						<div class="sidebar__poster poster">
+							<h4 class="poster__title">Актеры на сегодня</h4>
+						</div>
+
+						<div class="sidebar__poster poster">
+							<h4 class="poster__title">Актеры на завтра</h4>
+						</div>
+
+						<a href="#" class="sidebar__question question-sidebar">
+							<h4 class="question-sidebar__title">Вопрос ответ</h4>
+						</a>
+
+						<div class="sidebar__delivery-details delivery-details">
+							<h4 class="delivery-details__title">Уточнение доставки <br>
+								он-лайн заказов</h4>
+							<div class="delivery-details__text">
+								<p>
+									После отправки он-лайн заказа, Вам
+									на почту автоматически отправляется
+									письмо-автоответчик. Если такое письмо
+									не пришло - значит Вы неправильно
+									ввели свой e-mail адрес. Свяжитесь с
+									администратором для уточнения.
+								</p>
+							</div>
+						</div>
 
 					</aside>
 
