--- a/epicenter/index.html
+++ b/epicenter/index.html
@@ -114,7 +114,44 @@
 
 						<div class="page-index__info info">
 
-							<div class="info__inner-text">
+							<div class="info__inner-text text-info">
+
+								<div class="text-info__tabs tabs-block _tabs">
+									<nav class="tabs-block__nav">
+										<div class="tabs-block__navitem tab__navitem _tabs-item _active">Изготовление аудиороликов</div>
+										<div class="tabs-block__navitem tab__navitem _tabs-item">Дикторские голоса</div>
+										<div class="tabs-block__navitem tab__navitem _tabs-item">Радиоролики для торговых центров</div>
+										<div class="tabs-block__navitem tab__navitem _tabs-item">Голосовые приветствия</div>
+										<div class="tabs-block__navitem tab__navitem _tabs-item">Оформление эфира</div>
+										<div class="tabs-block__navitem tab__navitem _tabs-item">Озвучка видео роликов</div>
+									</nav>
+									<div class="tabs-block__items">
+										<div class="tabs-block__item tab__item _tabs-block _active">
+											<h2 class="text-info__tabs-block-title">Изготовление радиорекламы, озвучка рекламы</h2>
+											<div class="text-info__tabs-block-descp">
+												<p>
+													В нашей студии работает система автоматического управления заказами, привязанная к сайту,
+													поэтому в первую очередь обрабатываются и выполняются те заказы, которые Вы отправили через
+													форму на сайте.
+												</p>
+												<p>
+													Дикторская начитка, голос диктора, аудиореклама, радиоролики,
+													озвучка текста, диктор онлайн скачать, база дикторских голосов
+												</p>
+											</div>
+										</div>
+										<div class="tabs-block__item tab__item _tabs-block">Описание 2</div>
+										<div class="tabs-block__item tab__item _tabs-block">Описание 3</div>
+										<div class="tabs-block__item tab__item _tabs-block">Описание 4</div>
+										<div class="tabs-block__item tab__item _tabs-block">Описание 5</div>
+										<div class="tabs-block__item tab__item _tabs-block">Описание 6</div>
+									</div>
+								</div>
+
+								<div class="text-info__board">
+									<div class="text-info__board-item">Дикторские голоса <span>300</span> рублей</div>
+									<div class="text-info__board-item">Радиоролики <span>800</span> рублей</div>
+								</div>
 
 							</div>
 
