--- a/epicenter/catalog.html
+++ b/epicenter/catalog.html
@@ -25,7 +25,11 @@
 
 		<div class="header__row d-flex">
 
-			<a href="index.html" class="logo-icon header__logo"></a>
+			<a href="index.html" class="logo-icon header__logo">
+				<svg>
+					<use xlink:href="#logo"></use>
+				</svg>
+			</a>
 
 			<ul class="header__menu-list menu-list d-flex">
 				<li class="menu-list__item"><a href="#" class="menu-list__link"><span></span> Аудиоролики</a></li>
