--- a/epicenter/index.html
+++ b/epicenter/index.html
@@ -25,7 +25,11 @@
 
 		<div class="header__row d-flex">
 
-			<a href="index.html" class="logo-icon header__logo"></a>
+			<a href="index.html" class="logo-icon header__logo">
+				<svg>
+					<use xlink:href="#logo"></use>
+				</svg>
+			</a>
 
 			<ul class="header__menu-list menu-list d-flex">
 				<li class="menu-list__item"><a href="#" class="menu-list__link"><span></span> Аудиоролики</a></li>
@@ -319,6 +323,39 @@
 	</div>
 </footer>
 	</div>
+	<!-- svg спрайты -->
+<svg xmlns="http://www.w3.org/2000/svg" display="none">
+
+	<!-- logo -->
+	<symbol id="logo" viewBox="0 0 318.538 61.044">
+  <g id="Сгруппировать_112" data-name="Сгруппировать 112" transform="translate(-4718.567 -48.392)">
+    <path id="Контур_430" data-name="Контур 430" d="M4831.572,71.813a18.083,18.083,0,0,0-.334-3.422c-1.2-10.063-5.913-14.62-16.346-14.62h-30.416V103.4h16.135V66.853h9.853a4.967,4.967,0,0,1,4.966,4.966l.007.009V103.4h16.135V74.375c0-.633-.02-1.23-.038-1.832C4831.545,72.3,4831.572,72.06,4831.572,71.813Z" fill="#464545"/>
+    <path id="Контур_431" data-name="Контур 431" d="M4835.629,85.356a18.123,18.123,0,0,0,.334,3.422c1.2,10.063,5.913,14.62,16.346,14.62h30.416V53.771H4866.59V90.316h-9.853a4.967,4.967,0,0,1-4.966-4.966l-.007-.009V53.771h-16.135V82.794c0,.632.02,1.23.038,1.832C4835.656,84.87,4835.629,85.109,4835.629,85.356Z" fill="#464545"/>
+    <g id="Сгруппировать_110" data-name="Сгруппировать 110">
+      <ellipse id="Эллипс_6" data-name="Эллипс 6" cx="29.378" cy="29.2" rx="29.378" ry="29.2" transform="translate(4719.89 49.715)" fill="#fff" stroke="#d9000d" stroke-miterlimit="10" stroke-width="2.645"/>
+      <ellipse id="Эллипс_7" data-name="Эллипс 7" cx="19.585" cy="19.466" rx="19.585" ry="19.466" transform="translate(4729.683 59.448)" fill="#fff" stroke="#d9000d" stroke-miterlimit="10" stroke-width="2.645"/>
+    </g>
+    <path id="Контур_432" data-name="Контур 432" d="M4775.84,86.038V71.943h-27.415V86.038Z" fill="#d9000d"/>
+    <path id="Контур_433" data-name="Контур 433" d="M4749.268,49.715v9.733a19.467,19.467,0,1,1,0,38.933v9.733a29.2,29.2,0,1,0,0-58.4Z" fill="#d9000d" stroke="#d9000d" stroke-miterlimit="10" stroke-width="2.645"/>
+    <path id="Контур_434" data-name="Контур 434" d="M4900.422,74.515h-1.331a2.819,2.819,0,0,1-2.819-2.819l0,0V53.771h-9.158V70.245c0,.36.011.7.021,1.04-.006.139-.021.275-.021.415a10.3,10.3,0,0,0,.189,1.942c.683,5.712,3.357,8.3,9.278,8.3h20.718v-7.42h-16.873Z" fill="#464545"/>
+    <path id="Контур_435" data-name="Контур 435" d="M4904.685,53.771v17.8h9.159v-17.8Z" fill="#464545"/>
+    <g id="Сгруппировать_111" data-name="Сгруппировать 111">
+      <path id="Контур_436" data-name="Контур 436" d="M4921.256,81.941h25.668V74.521h-25.668Z" fill="#464545"/>
+      <path id="Контур_437" data-name="Контур 437" d="M4946.924,61.192V53.771h-25.668v17.8h25.668V64.146h-16.509V61.192Z" fill="#464545"/>
+    </g>
+    <path id="Контур_438" data-name="Контур 438" d="M4999.625,64.091h-9.159v17.85h9.159Z" fill="#464545"/>
+    <path id="Контур_439" data-name="Контур 439" d="M4982.212,53.771v7.421h25.668V53.771Z" fill="#464545"/>
+    <path id="Контур_440" data-name="Контур 440" d="M5020.642,64.091h-9.159v17.85h9.159Z" fill="#464545"/>
+    <path id="Контур_441" data-name="Контур 441" d="M4950.655,53.771v28.17h9.159V53.771Z" fill="#464545"/>
+    <path id="Контур_442" data-name="Контур 442" d="M4969.465,53.771v28.17h9.159V53.771Z" fill="#464545"/>
+    <rect id="Прямоугольник_25" data-name="Прямоугольник 25" width="15.42" height="7.421" transform="translate(4962.295 64.146)" fill="#464545"/>
+    <path id="Контур_443" data-name="Контур 443" d="M5028.23,53.771c-.157,0-.309.015-.463.023-.164-.008-.327-.023-.493-.023h-15.791V61.2h16.837c.026,0,.053,0,.08,0s.05,0,.075,0a1.445,1.445,0,1,1,0,2.891c-.025,0-.05,0-.075,0s-.054,0-.08,0h-16.837v7.425h15.791c.166,0,.329-.015.493-.024.154.008.306.024.463.024a8.871,8.871,0,0,0,0-17.741Z" fill="#464545"/>
+    <rect id="Прямоугольник_26" data-name="Прямоугольник 26" width="149.995" height="17.358" transform="translate(4887.11 86.04)" fill="#d0000e"/>
+    <text id="рекламы" transform="translate(4901.221 98.532)" fill="#fff" font-size="14.418" font-family="MicrosoftYaHeiUI-Bold, Microsoft YaHei UI" font-weight="700" letter-spacing="0.6em"><tspan x="0" y="0">рекламы</tspan></text>
+  </g>
+	</symbol>
+
+</svg> 
 	<!-- Popup-с формой -->
 <div class="popup popup_callback">
 	<div class="popup__content">
