--- a/#src/index.html
+++ b/#src/index.html
@@ -171,10 +171,256 @@
 
 						<div class="sidebar__poster poster">
 							<h4 class="poster__title">Актеры на сегодня</h4>
+							<div class="poster__scoreboard scoreboard">
+								<div class="scoreboard__text">6 ноября, суббота</div>
+							</div>
+
+							<div class="poster__table table-poster">
+
+								<div class="table-poster__row">
+									<div class="table-poster__col">
+										<div class="table-poster__name">Базаров</div>
+									</div>
+									<div class="table-poster__col">
+										<div class="table-poster__value"><span class="table-poster__indicator --red"></span> записан</div>
+									</div>
+									<div class="table-poster__col">
+										<div class="table-poster__time --opacity">17.00</div>
+									</div>
+								</div>
+
+								<div class="table-poster__row">
+									<div class="table-poster__col">
+										<div class="table-poster__name">Щербатюк</div>
+									</div>
+									<div class="table-poster__col">
+										<div class="table-poster__value"><span class="table-poster__indicator"></span> в студии до</div>
+									</div>
+									<div class="table-poster__col">
+										<div class="table-poster__time">17:00</div>
+									</div>
+								</div>
+
+								<div class="table-poster__row">
+									<div class="table-poster__col">
+										<div class="table-poster__name">Чалин</div>
+									</div>
+									<div class="table-poster__col">
+										<div class="table-poster__value"><span class="table-poster__indicator --red"></span> в студии до
+										</div>
+									</div>
+									<div class="table-poster__col">
+										<div class="table-poster__time">15:30</div>
+									</div>
+								</div>
+
+								<div class="table-poster__row">
+									<div class="table-poster__col">
+										<div class="table-poster__name">Харитонов</div>
+									</div>
+									<div class="table-poster__col">
+										<div class="table-poster__value"><span class="table-poster__indicator --red"></span> в студии до
+										</div>
+									</div>
+									<div class="table-poster__col">
+										<div class="table-poster__time">17:00</div>
+									</div>
+								</div>
+
+								<div class="table-poster__row">
+									<div class="table-poster__col">
+										<div class="table-poster__name">Черная</div>
+									</div>
+									<div class="table-poster__col">
+										<div class="table-poster__value"><span class="table-poster__indicator --green"></span> ожидается к
+										</div>
+									</div>
+									<div class="table-poster__col">
+										<div class="table-poster__time">14:00</div>
+									</div>
+								</div>
+
+								<div class="table-poster__row">
+									<div class="table-poster__col">
+										<div class="table-poster__name">Ольховский</div>
+									</div>
+									<div class="table-poster__col">
+										<div class="table-poster__value"><span class="table-poster__indicator --green"></span> ожидается к
+										</div>
+									</div>
+									<div class="table-poster__col">
+										<div class="table-poster__time">14:30</div>
+									</div>
+								</div>
+
+								<div class="table-poster__row">
+									<div class="table-poster__col">
+										<div class="table-poster__name">Ковалева</div>
+									</div>
+									<div class="table-poster__col">
+										<div class="table-poster__value"><span class="table-poster__indicator --green"></span> ожидается к
+										</div>
+									</div>
+									<div class="table-poster__col">
+										<div class="table-poster__time">14:30</div>
+									</div>
+								</div>
+
+								<div class="table-poster__row">
+									<div class="table-poster__col">
+										<div class="table-poster__name">Генералова</div>
+									</div>
+									<div class="table-poster__col">
+										<div class="table-poster__value"><span class="table-poster__indicator --green"></span> ожидается к
+										</div>
+									</div>
+									<div class="table-poster__col">
+										<div class="table-poster__time">15:00</div>
+									</div>
+								</div>
+
+								<div class="table-poster__row">
+									<div class="table-poster__col">
+										<div class="table-poster__name">Волконский</div>
+									</div>
+									<div class="table-poster__col">
+										<div class="table-poster__value"><span class="table-poster__indicator --green"></span> ожидается к
+										</div>
+									</div>
+									<div class="table-poster__col">
+										<div class="table-poster__time">17:00</div>
+									</div>
+								</div>
+
+							</div>
+
 						</div>
 
 						<div class="sidebar__poster poster">
 							<h4 class="poster__title">Актеры на завтра</h4>
+							<div class="poster__scoreboard scoreboard">
+								<div class="scoreboard__text">7 ноября, пятница</div>
+							</div>
+							<div class="poster__table table-poster">
+
+								<div class="table-poster__row">
+									<div class="table-poster__col">
+										<div class="table-poster__name">Базаров</div>
+									</div>
+									<div class="table-poster__col">
+										<div class="table-poster__value"><span class="table-poster__indicator --green"></span> ожидается к
+										</div>
+									</div>
+									<div class="table-poster__col">
+										<div class="table-poster__time">15.00</div>
+									</div>
+								</div>
+
+								<div class="table-poster__row">
+									<div class="table-poster__col">
+										<div class="table-poster__name">Щербатюк</div>
+									</div>
+									<div class="table-poster__col">
+										<div class="table-poster__value"><span class="table-poster__indicator --green"></span> ожидается к
+										</div>
+									</div>
+									<div class="table-poster__col">
+										<div class="table-poster__time">17:00</div>
+									</div>
+								</div>
+
+								<div class="table-poster__row">
+									<div class="table-poster__col">
+										<div class="table-poster__name">Чалин</div>
+									</div>
+									<div class="table-poster__col">
+										<div class="table-poster__value"><span class="table-poster__indicator --green"></span> ожидается к
+										</div>
+									</div>
+									<div class="table-poster__col">
+										<div class="table-poster__time">15:30</div>
+									</div>
+								</div>
+
+								<div class="table-poster__row">
+									<div class="table-poster__col">
+										<div class="table-poster__name">Харитонов</div>
+									</div>
+									<div class="table-poster__col">
+										<div class="table-poster__value"><span class="table-poster__indicator --green"></span> ожидается к
+										</div>
+									</div>
+									<div class="table-poster__col">
+										<div class="table-poster__time">17:00</div>
+									</div>
+								</div>
+
+								<div class="table-poster__row">
+									<div class="table-poster__col">
+										<div class="table-poster__name">Черная</div>
+									</div>
+									<div class="table-poster__col">
+										<div class="table-poster__value"><span class="table-poster__indicator --green"></span> ожидается к
+										</div>
+									</div>
+									<div class="table-poster__col">
+										<div class="table-poster__time">14:00</div>
+									</div>
+								</div>
+
+								<div class="table-poster__row">
+									<div class="table-poster__col">
+										<div class="table-poster__name">Ольховский</div>
+									</div>
+									<div class="table-poster__col">
+										<div class="table-poster__value"><span class="table-poster__indicator --green"></span> ожидается к
+										</div>
+									</div>
+									<div class="table-poster__col">
+										<div class="table-poster__time">14:30</div>
+									</div>
+								</div>
+
+								<div class="table-poster__row">
+									<div class="table-poster__col">
+										<div class="table-poster__name">Ковалева</div>
+									</div>
+									<div class="table-poster__col">
+										<div class="table-poster__value"><span class="table-poster__indicator --green"></span> ожидается к
+										</div>
+									</div>
+									<div class="table-poster__col">
+										<div class="table-poster__time">14:30</div>
+									</div>
+								</div>
+
+								<div class="table-poster__row">
+									<div class="table-poster__col">
+										<div class="table-poster__name">Генералова</div>
+									</div>
+									<div class="table-poster__col">
+										<div class="table-poster__value"><span class="table-poster__indicator --green"></span> ожидается к
+										</div>
+									</div>
+									<div class="table-poster__col">
+										<div class="table-poster__time">15:00</div>
+									</div>
+								</div>
+
+								<div class="table-poster__row">
+									<div class="table-poster__col">
+										<div class="table-poster__name">Волконский</div>
+									</div>
+									<div class="table-poster__col">
+										<div class="table-poster__value"><span class="table-poster__indicator --green"></span> ожидается к
+										</div>
+									</div>
+									<div class="table-poster__col">
+										<div class="table-poster__time">17:00</div>
+									</div>
+								</div>
+
+							</div>
 						</div>
 
 						<a href="#" class="sidebar__question question-sidebar">
