--- a/epicenter/catalog.html
+++ b/epicenter/catalog.html
@@ -32,11 +32,31 @@
 			</a>
 
 			<ul class="header__menu-list menu-list d-flex">
-				<li class="menu-list__item"><a href="#" class="menu-list__link"><span></span> Аудиоролики</a></li>
-				<li class="menu-list__item"><a href="#" class="menu-list__link"><span></span>Дикторы</a></li>
-				<li class="menu-list__item"><a href="#" class="menu-list__link"><span></span>Хронометраж</a></li>
-				<li class="menu-list__item"><a href="#" class="menu-list__link"><span></span>Оплата</a></li>
-				<li class="menu-list__item"><a href="#" class="menu-list__link"><span></span>Контакты</a></li>
+				<li class="menu-list__item"><a href="#" class="menu-list__link"><span>
+							<svg>
+								<use xlink:href="#audio"></use>
+							</svg>
+						</span> Аудиоролики</a></li>
+				<li class="menu-list__item"><a href="#" class="menu-list__link"><span>
+							<svg>
+								<use xlink:href="#announcers"></use>
+							</svg>
+						</span>Дикторы</a></li>
+				<li class="menu-list__item"><a href="#" class="menu-list__link"><span>
+							<svg>
+								<use xlink:href="#timing"></use>
+							</svg>
+						</span>Хронометраж</a></li>
+				<li class="menu-list__item"><a href="#" class="menu-list__link"><span>
+							<svg>
+								<use xlink:href="#price"></use>
+							</svg>
+						</span>Оплата</a></li>
+				<li class="menu-list__item"><a href="#" class="menu-list__link"><span>
+							<svg>
+								<use xlink:href="#contacts"></use>
+							</svg>
+						</span>Контакты</a></li>
 			</ul>
 
 			<button type="button" class="icon-menu" aria-label="Иконка бургера">
