--- a/#src/index.html
+++ b/#src/index.html
@@ -45,11 +45,76 @@
 												</p>
 											</div>
 										</div>
-										<div class="tabs-block__item tab__item _tabs-block">Описание 2</div>
-										<div class="tabs-block__item tab__item _tabs-block">Описание 3</div>
-										<div class="tabs-block__item tab__item _tabs-block">Описание 4</div>
-										<div class="tabs-block__item tab__item _tabs-block">Описание 5</div>
-										<div class="tabs-block__item tab__item _tabs-block">Описание 6</div>
+										<div class="tabs-block__item tab__item _tabs-block">
+											<h2 class="text-info__tabs-block-title">Изготовление радиорекламы, озвучка рекламы 2</h2>
+											<div class="text-info__tabs-block-descp">
+												<p>
+													В нашей студии работает система автоматического управления заказами, привязанная к сайту,
+													поэтому в первую очередь обрабатываются и выполняются те заказы, которые Вы отправили через
+													форму на сайте.
+												</p>
+												<p>
+													Дикторская начитка, голос диктора, аудиореклама, радиоролики,
+													озвучка текста, диктор онлайн скачать, база дикторских голосов
+												</p>
+											</div>
+										</div>
+										<div class="tabs-block__item tab__item _tabs-block">
+											<h2 class="text-info__tabs-block-title">Изготовление радиорекламы, озвучка рекламы 3</h2>
+											<div class="text-info__tabs-block-descp">
+												<p>
+													В нашей студии работает система автоматического управления заказами, привязанная к сайту,
+													поэтому в первую очередь обрабатываются и выполняются те заказы, которые Вы отправили через
+													форму на сайте.
+												</p>
+												<p>
+													Дикторская начитка, голос диктора, аудиореклама, радиоролики,
+													озвучка текста, диктор онлайн скачать, база дикторских голосов
+												</p>
+											</div>
+										</div>
+										<div class="tabs-block__item tab__item _tabs-block">
+											<h2 class="text-info__tabs-block-title">Изготовление радиорекламы, озвучка рекламы 4</h2>
+											<div class="text-info__tabs-block-descp">
+												<p>
+													В нашей студии работает система автоматического управления заказами, привязанная к сайту,
+													поэтому в первую очередь обрабатываются и выполняются те заказы, которые Вы отправили через
+													форму на сайте.
+												</p>
+												<p>
+													Дикторская начитка, голос диктора, аудиореклама, радиоролики,
+													озвучка текста, диктор онлайн скачать, база дикторских голосов
+												</p>
+											</div>
+										</div>
+										<div class="tabs-block__item tab__item _tabs-block">
+											<h2 class="text-info__tabs-block-title">Изготовление радиорекламы, озвучка рекламы 5</h2>
+											<div class="text-info__tabs-block-descp">
+												<p>
+													В нашей студии работает система автоматического управления заказами, привязанная к сайту,
+													поэтому в первую очередь обрабатываются и выполняются те заказы, которые Вы отправили через
+													форму на сайте.
+												</p>
+												<p>
+													Дикторская начитка, голос диктора, аудиореклама, радиоролики,
+													озвучка текста, диктор онлайн скачать, база дикторских голосов
+												</p>
+											</div>
+										</div>
+										<div class="tabs-block__item tab__item _tabs-block">
+											<h2 class="text-info__tabs-block-title">Изготовление радиорекламы, озвучка рекламы 6</h2>
+											<div class="text-info__tabs-block-descp">
+												<p>
+													В нашей студии работает система автоматического управления заказами, привязанная к сайту,
+													поэтому в первую очередь обрабатываются и выполняются те заказы, которые Вы отправили через
+													форму на сайте.
+												</p>
+												<p>
+													Дикторская начитка, голос диктора, аудиореклама, радиоролики,
+													озвучка текста, диктор онлайн скачать, база дикторских голосов
+												</p>
+											</div>
+										</div>
 									</div>
 								</div>
 
@@ -165,7 +230,7 @@
 					<aside class="page-index__sidebar sidebar">
 
 						<div class="sidebar__button-block">
-							<a href="#" class="sidebar__btn btn btn--red">Оформить On-line заказ</a>
+							<a href="#callback" class="sidebar__btn btn btn--red _popup-link">Оформить On-line заказ</a>
 							<a href="#" class="sidebar__btn btn btn--grey">Ваши файлы</a>
 						</div>
 
